- allow maintdb get <package> without packagers credentials
- add a progress bar for git-svn cloning

* 1.14.3
- remove vcs suffix properly for local repo path
- support newer format of fedpkg 'sources' file

* 1.14.2
- add support for cloning fedora repos with downloading of sources with
  'repsys fedpkg clone <pkg>'

* 1.14.1
- as some usernames in svn no longer exists, get old usermap conversion txt
  file from svn.mageia.org again as previously to fill out the blanks,
  otherwise git-svn username conversion will fail

* 1.14.0
- revert from 'mgarepo' fork name to original 'repsys' name

* 1.13.4
- document 'github clone' command

* 1.13.3
- fix $SVN_SSH not necessarily properly being set, breaking non-ssh fallback

* 1.13.2
- Corrections for 'putsrpm' command
- Fix rpm command for unpacking source RPMs
- Fix typo in CHANGES

* 1.13.1
- automatically fallback to non-ssh (ie. svn:// rather than svn+ssh://) when
  authentication fails
- move detectVCS() to separate module to prevent import order
- fix 'mgarepo sync -d' for git-svn repos
- update upload_binary() to properly use newer execcmd()
- redirect stdin, as required for ssh session invoked through binrepo

* 1.13.0
- implement 'clone' command with support for quick git-svn cloning
- implement 'github' command initial support for github integration
- implement 'buildrpm' command for easy package building from local package
  repository
	o implement automatic satisfaction of build dependencies using urpmi
	o implement automatic satisfaction of build dependencies using DNF
- implement support for generating complete %changelog with full packager
  names & mail addresses in entries
- refactorize & clean up much of code
- fix python 3 issue with bytes strings, properly converting them to utf-8
- make execcmd() safe by only accepting individual arguments through a
  list/tuple rather than accepting strings of arguments run through shell
- fetch svn log in xml format for more reliable parsing using ElementTree