@@ -38,3 +38,9 @@ organization = mdkcauldron
 
 [fedora]
 #login = someuser
+
+[abf]
+project=OpenMandrivaAssociation
+protocol=ssh
+#login = someuser
+#password = somepassword
